# custom-chatbot

./: .dockerignore  .env.docker-test  .env.example  .env.jordan.example  .env.production  .env.us.example  .gitignore  AWS_SECRETS_ISSUE.md  CI_CD_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  GEMINI_SETUP.md  IMPROVEMENTS.md  MULTI_APP_SETUP.md  MULTI_TENANT_SETUP.md  Makefile  README.md  apply_performance_optimizations.py  bitbucket-pipelines.yml  debug_db.py  docker-compose.multi-tenant.yml  docker-compose.single-tenant.yml  docker-compose.yml  env.jo.example  env.us.example  find-cluster.sh  fix_aws_secrets.sh  instances.yaml  pyproject.toml  test_bullet_formatting.py  test_db_config.py  test_docker_deployment.sh  test_feedback_timeout.py  test_greeting_debug.py  test_greeting_logic.py  test_new_greeting_behavior.py  test_response_speed.py  test_teams_streaming.py
configs/: tenant-config.yml
data/embeddings/: hr_documents.npz  hr_documents_docs.pkl  hr_documents_embeddings.npy
data/knowledge/: Attendance, Leaves, Vacations.docx  Discounts.docx  NOI Submission SOP HR Jordan.docx  sick_leave_policy.txt
data/prompts/: __init__.py
data1/knowledge/: Badge Guidelines.docx  (+3 more)
docker/: Dockerfile
docs/: MULTI_TENANT_DEPLOYMENT.md
k8s/: deployment.yaml
scripts/: check_embeddings.py  deploy.sh  deploy_multi_tenant.sh  docker-entrypoint.sh  healthcheck.py  init-db.sql  load_embeddings.py  migrate_to_multi_tenant.py  performance_test.py  seed_knowledge.py  setup_multi_tenant.py
tests/: run_load_tests.py  test_embedding.py  test_gemini.py  test_teams_api.py
(+84 files in other folders)
